--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@typechain/ethers-v5": "^10.1.0",
         "@typechain/hardhat": "^6.1.2",
         "@types/chai": "^4.3.1",
+        "@types/mocha": "^9.1.1",
         "@types/node": "^18.0.4",
         "chai": "^4.3.6",
         "dotenv": "^16.0.1",
@@ -16,6 +17,7 @@
         "hardhat": "^2.10.1",
         "hardhat-contract-sizer": "^2.6.1",
         "hardhat-deploy": "^0.11.11",
+        "hardhat-deploy-ethers": "^0.3.0-beta.13",
         "hardhat-gas-reporter": "^1.0.8",
         "prettier": "^2.7.1",
         "prettier-plugin-solidity": "^1.0.0-dev.23",
